--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -7,17 +7,23 @@ charset-normalizer==3.3.2
 distro==1.9.0
 Django==5.0.4
 django-cors-headers==4.3.1
+django-environ==0.11.2
 djangorestframework==3.15.1
 filelock==3.14.0
 fsspec==2024.3.1
+greenlet==3.0.3
 h11==0.14.0
 httpcore==1.0.5
 httpx==0.27.0
 huggingface-hub==0.23.0
 idna==3.7
 packaging==24.0
+playwright==1.43.0
+psycopg2-binary==2.9.9
 pydantic==2.7.1
 pydantic_core==2.18.2
+pyee==11.1.0
+python-dotenv==1.0.1
 PyYAML==6.0.1
 requests==2.31.0
 sniffio==1.3.1
