--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -3,15 +3,19 @@ anthropic==0.25.7
 anyio==4.3.0
 asgiref==3.8.1
 beautifulsoup4==4.12.3
+boto3==1.34.133
+botocore==1.34.133
 cachetools==5.3.3
 certifi==2024.2.2
 charset-normalizer==3.3.2
+cohere==5.5.8
 distro==1.9.0
 Django==5.0.4
 django-cors-headers==4.3.1
 django-environ==0.11.2
 djangorestframework==3.15.1
 et-xmlfile==1.1.0
+fastavro==1.9.4
 filelock==3.14.0
 fsspec==2024.3.1
 google-ai-generativelanguage==0.6.4
@@ -28,8 +32,10 @@ h11==0.14.0
 httpcore==1.0.5
 httplib2==0.22.0
 httpx==0.27.0
+httpx-sse==0.4.0
 huggingface-hub==0.23.0
 idna==3.7
+jmespath==1.0.1
 joblib==1.4.2
 lxml==5.2.2
 numpy==1.26.4
@@ -37,6 +43,7 @@ openai==1.35.3
 openpyxl==3.1.3
 packaging==24.0
 pandas==2.2.2
+parameterized==0.9.0
 pgvector==0.2.5
 playwright==1.43.0
 proto-plus==1.23.0
@@ -55,6 +62,7 @@ pytz==2024.1
 PyYAML==6.0.1
 requests==2.31.0
 rsa==4.9
+s3transfer==0.10.2
 scikit-learn==1.5.0
 scipy==1.13.1
 six==1.16.0
@@ -64,6 +72,7 @@ sqlparse==0.5.0
 threadpoolctl==3.5.0
 tokenizers==0.19.1
 tqdm==4.66.4
+types-requests==2.32.0.20240622
 typing_extensions==4.11.0
 tzdata==2024.1
 uritemplate==4.1.1
