--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -2,6 +2,7 @@ annotated-types==0.6.0
 anthropic==0.25.7
 anyio==4.3.0
 asgiref==3.8.1
+attrs==23.2.0
 beautifulsoup4==4.12.3
 boto3==1.34.133
 botocore==1.34.133
@@ -41,6 +42,7 @@ lxml==5.2.2
 numpy==1.26.4
 openai==1.35.3
 openpyxl==3.1.3
+outcome==1.3.0.post0
 packaging==24.0
 pandas==2.2.2
 parameterized==0.9.0
@@ -55,6 +57,7 @@ pydantic==2.7.1
 pydantic_core==2.18.2
 pyee==11.1.0
 pyparsing==3.1.2
+PySocks==1.7.1
 python-dateutil==2.9.0.post0
 python-docx==1.1.2
 python-dotenv==1.0.1
@@ -65,15 +68,22 @@ rsa==4.9
 s3transfer==0.10.2
 scikit-learn==1.5.0
 scipy==1.13.1
+selenium==4.22.0
 six==1.16.0
 sniffio==1.3.1
+sortedcontainers==2.4.0
 soupsieve==2.5
 sqlparse==0.5.0
 threadpoolctl==3.5.0
 tokenizers==0.19.1
 tqdm==4.66.4
+trio==0.26.0
+trio-websocket==0.11.1
 types-requests==2.32.0.20240622
 typing_extensions==4.11.0
 tzdata==2024.1
 uritemplate==4.1.1
 urllib3==2.2.1
+webdriver-manager==4.0.1
+websocket-client==1.8.0
+wsproto==1.2.0
