--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -39,6 +39,7 @@ idna==3.7
 jmespath==1.0.1
 joblib==1.4.2
 lxml==5.2.2
+MouseInfo==0.1.3
 numpy==1.26.4
 openai==1.35.3
 openpyxl==3.1.3
@@ -48,27 +49,40 @@ pandas==2.2.2
 parameterized==0.9.0
 pgvector==0.2.5
 playwright==1.43.0
+playwright-stealth==1.0.6
 proto-plus==1.23.0
 protobuf==4.25.3
 psycopg2-binary==2.9.9
 pyasn1==0.6.0
 pyasn1_modules==0.4.0
+PyAutoGUI==0.9.54
 pydantic==2.7.1
 pydantic_core==2.18.2
 pyee==11.1.0
+PyGetWindow==0.0.9
+PyMsgBox==1.0.9
+pyobjc-core==10.3.1
+pyobjc-framework-Cocoa==10.3.1
+pyobjc-framework-Quartz==10.3.1
 pyparsing==3.1.2
+pyperclip==1.9.0
+PyRect==0.2.0
+PyScreeze==0.1.30
 PySocks==1.7.1
 python-dateutil==2.9.0.post0
 python-docx==1.1.2
 python-dotenv==1.0.1
+pytweening==1.2.0
 pytz==2024.1
 PyYAML==6.0.1
 requests==2.31.0
 rsa==4.9
+rubicon-objc==0.4.9
 s3transfer==0.10.2
 scikit-learn==1.5.0
 scipy==1.13.1
 selenium==4.22.0
+setuptools==71.0.3
 six==1.16.0
 sniffio==1.3.1
 sortedcontainers==2.4.0
